# integer-hasher

./: Cargo.toml  README.md  build_doc.sh
.github/workflows/: rust.yml
src/: lib.rs
